# cookiecutter-python-devcontainer

./: README.md  cookiecutter.json  pyproject.toml  requirements.txt
tests/: test_bake_project.py  test_docker_images.py  utils.py
{{cookiecutter.project_slug}}/: Dockerfile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.devcontainer/: Dockerfile  devcontainer.json
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
