[tool.pytest.ini_options]
norecursedirs = [
    ".venv",
    ".vscode",
    "__pycache__",
    "{{cookiecutter.project_slug}}"
]
python_files = [
    "test_*.py"
]
python_functions = [
    "test_*"
]


[tool.poetry]
name = "cookiecutter-python-devcontainer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.*"
cookiecutter = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cookies = "^0.6.1"
toml = "^0.10.2"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
